--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ DISCORD_PUBLIC_KEY=
 # MongoDB
 MONGO_USER=
 MONGO_PASSWORD=
+
+# Container user, docker-compose.prod.yaml only
+CONTAINER_USER=root
