--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,10 +23,10 @@ services:
         depends_on:
             - redis
         environment:
-            SA_COOKIES_SESSION_ID: ${SA_COOKIES_SESSION_ID}
-            SA_COOKIES_SESSION_HASH: ${SA_COOKIES_SESSION_HASH}
-            SA_COOKIES_BB_USER_ID: ${SA_COOKIES_BB_USER_ID}
-            SA_COOKIES_BB_PASSWORD: ${SA_COOKIES_BB_PASSWORD}
+            SA_COOKIES_SESSION_ID: ${SA_COOKIES_SESSION_ID:?err}
+            SA_COOKIES_SESSION_HASH: ${SA_COOKIES_SESSION_HASH:?err}
+            SA_COOKIES_BB_USER_ID: ${SA_COOKIES_BB_USER_ID:?err}
+            SA_COOKIES_BB_PASSWORD: ${SA_COOKIES_BB_PASSWORD:?err}
             CACHE_SYSTEM: redis
             CACHE_REDIS_ADDRESS: redis
     
@@ -35,8 +35,8 @@ services:
         image: mongo
         restart: unless-stopped
         environment:
-            MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
-            MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
+            MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER:?err}
+            MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD:?err}
         volumes:
             - mongo_data:/data/db
       
@@ -50,8 +50,8 @@ services:
         environment:
             DB_MONGO_HOST: mongo
             DB_MONGO_PORT: 27017
-            DB_MONGO_USER: ${MONGO_USER}
-            DB_MONGO_PASS: ${MONGO_PASSWORD}
+            DB_MONGO_USER: ${MONGO_USER:?err}
+            DB_MONGO_PASS: ${MONGO_PASSWORD:?err}
             DB_MONGO_DB_NAME: goon-files
     
     # Discord Auth
@@ -65,13 +65,13 @@ services:
         ports:
             - 8080:80
         environment: 
-            DISCORD_BOT_TOKEN: ${DISCORD_BOT_TOKEN}
-            DISCORD_APPLICATION_ID: ${DISCORD_APPLICATION_ID}
-            DISCORD_PUBLIC_KEY: ${DISCORD_PUBLIC_KEY}
+            DISCORD_BOT_TOKEN: ${DISCORD_BOT_TOKEN:?err}
+            DISCORD_APPLICATION_ID: ${DISCORD_APPLICATION_ID:?err}
+            DISCORD_PUBLIC_KEY: ${DISCORD_PUBLIC_KEY:?err}
             AWFUL_AUTH_ADDRESS: http://awful-auth/
             GOON_FILES_ADDRESS: http://goon-files/
             DB_MONGO_HOST: mongo
             DB_MONGO_PORT: 27017
-            DB_MONGO_USER: ${MONGO_USER}
-            DB_MONGO_PASS: ${MONGO_PASSWORD}
+            DB_MONGO_USER: ${MONGO_USER:?err}
+            DB_MONGO_PASS: ${MONGO_PASSWORD:?err}
             DB_MONGO_DB_NAME: discord-auth
